# stater-fsm-code

./: README.md
.github/workflows/: c#_tests.yml  c++_tests.yml  java_tests.yml  js_tests.yml  kotlin_tests.yml  python_tests.yml  ts_tests.yml
projects/c++/: CMakeLists.txt
projects/c++/src/: stater_state_machine.cpp  stater_state_machine.h
projects/c++/tests/: test_door.cpp
projects/cPlusPlus/: CMakeLists.txt  auto_config_cmake.sh
projects/cPlusPlus/src/: stater_state_machine.cpp  stater_state_machine.h
projects/cPlusPlus/tests/: test_door.cpp
projects/csharp/Stater.StateMachine.Lib/Stater.StateMachine.Lib/: StaterStateMachine.cs
projects/csharp/Stater.StateMachine.Lib/Stater.StateMachine.Lib.Tests/: TestDoor.cs
projects/java/: pom.xml
projects/java/src/main/java/com/stater/statemachine/java/: BaseFSM.java  Context.java  ContextJsonAdapter.java  EmptyContext.java  Event.java  JsonSchema.java  JsonState.java  NameEvent.java  StateEvent.java  StateMachineFactory.java  StaterStateMachine.java  StaterStateMachineBuilder.java  Transition.java  TransitionMiddleware.java  TransitionNameMiddleware.java
projects/java/src/test/java/com/stater/statemachine/java/: TestDoor.java
projects/js/: package-lock.json  package.json
projects/js/src/: index.js
projects/js/tests/: TestDoor.js  door.test.js
projects/kotlin/: build.gradle.kts
projects/kotlin/gradle/wrapper/: gradle-wrapper.properties
projects/kotlin/src/main/kotlin/: StaterStateMachine.kt
projects/kotlin/src/main/kotlin/com/stater/statemachine/kotlin/: StaterStateMachine.kt
projects/kotlin/src/test/kotlin/: GeneratedDoor.kt  TestDoor.kt
projects/kotlin/src/test/kotlin/com/stater/statemachine/kotlin/: TestDoor.kt
projects/python/: README.md  pyproject.toml  schema.json
projects/python/route_finder/: check_logic.py  exceptions.py  generated_fsm.py  route_dto.py
projects/python/route_finder/database/: dto.py  services.py
projects/python/stater_state_machine/: __init__.py
projects/python/test/: generated_tests.py  test_door.py  test_fsm.py
projects/ts/: package-lock.json  package.json
projects/ts/src/: StaterStateMachine.ts
projects/ts/tests/: TestDoor.ts  door.test.ts
projects/с#/Stater.StateMachine.Lib/: Stater.StateMachine.Lib.sln
projects/с#/Stater.StateMachine.Lib/Stater.StateMachine.Lib/: StaterStateMachine.cs
projects/с#/Stater.StateMachine.Lib/Stater.StateMachine.Lib.Tests/: Stater.StateMachine.Lib.Tests.csproj  TestDoor.cs
